# fwinfo

./: Cargo.toml  LICENSE  NOTICE  build.rs
resources/: resources.gresource.xml  window.ui.xml
src/: main.rs
src/ui/: app.rs  mod.rs
src/ui/main_window/: imp.rs  mod.rs
src/utils/: mod.rs
