[package]
name = "fwinfo"
version = "0.1.0"
edition = "2024"

[dependencies]
framework_lib = { git = "https://github.com/FrameworkComputer/framework-system", rev = "922bbc5cbad97ca8889c580819fe01d569fe5fba" }
glib = "0.20.9"
glib-macros = "0.20.7"
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_18"] }
libc = "0.2.172"

[build-dependencies]
glib-build-tools = "0.20.0"
